# the-gang-onboarding

./: .envtemplate  .pre-commit-config.yaml  README.md  docker-compose.yml  manage.py  pyproject.toml  tox.ini
authentication/: models.py  permissions.py  serializer.py  services.py  urls.py  views.py
authentication/migrations/: 0001_initial.py
thesis/: apps.py  models.py  serializers.py  services.py  views.py
thesis/migrations/: 0001_initial.py  0002_uploadedfile.py
thesismanagement/: asgi.py  settings.py  urls.py  wsgi.py
